Fixed teeny tiny alignment thing in header

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -116,7 +116,7 @@ a:hover {
     text-indent: -9999px;
     float: left;
     margin-right: 1em;
-    margin-top: -13px;
+    margin-top: -21px;
 }
 
 #site-heading h1 span {
@@ -142,7 +142,7 @@ a:hover {
 
 #site-heading-rh a {
 	float:right;
-	margin-top:1.5em;
+	margin-top:1.6em;
 }
 
 .page-header + .clear {
